# schema

./: Cargo.toml  README.md
src/: convert.rs  db_ex.rs  lib.rs  relate_ex.rs  str_db.rs
src/db_ex/: db_test.rs
src/db_ex/snapshots/: app_db_schema__db_ex__db_test__bin_compare_obj_and_dbvalue-2.snap  app_db_schema__db_ex__db_test__bin_compare_obj_and_dbvalue.snap  app_db_schema__db_ex__db_test__compare_obj_and_dbvalue.snap  app_db_schema__db_ex__db_test__obj_serde.snap  app_db_schema__db_ex__db_test__raw_db_relate.snap  app_db_schema__db_ex__db_test__value_serde_to_obj.snap  app_db_schema__db_ex__db_test__vec_to_value.snap
src/macro_model/: curd.rs  method_macro.rs  mod.rs
src/macro_model/method_macro/: test_smethod.rs
src/macro_model/method_macro/snapshots/: app_db_schema__macro_model__method_macro__test_smethod__snap_create_app_str.snap  app_db_schema__macro_model__method_macro__test_smethod__snap_delete@after_hook.snap  app_db_schema__macro_model__method_macro__test_smethod__snap_delete@before_hook.snap  app_db_schema__macro_model__method_macro__test_smethod__snap_delete@check_execute.snap  app_db_schema__macro_model__method_macro__test_smethod__snap_delete_str.snap  (+1 more)
src/macro_model/snapshots/: app_db_schema__macro_model__method_macro__test__snap_create_app@after_hook.snap  app_db_schema__macro_model__method_macro__test__snap_create_app@check_execute.snap  app_db_schema__macro_model__method_macro__test__snap_create_app_str.snap  app_db_schema__macro_model__method_macro__test__snap_delete@after_hook.snap  app_db_schema__macro_model__method_macro__test__snap_delete@before_hook.snap  app_db_schema__macro_model__method_macro__test__snap_delete@check_execute.snap  app_db_schema__macro_model__method_macro__test__snap_delete_str.snap  app_db_schema__macro_model__method_macro__test__snap_get_app_str.snap
src/snapshots/: app_db_schema__relate_ex__db_relate.snap  app_db_schema__relate_ex__raw_db_relate.snap  app_db_schema__relate_ex__relate.snap  app_db_schema__str_db__compression_with_with_execute_one.snap  app_db_schema__str_db__display__display.snap  schema__relate_ex__db_relate.snap  schema__relate_ex__raw_db_relate.snap
src/str_db/: test_common.rs
src/str_db/snapshots/: app_db_schema__str_db__test_common__display.snap
