[package]
description = "a common package for app with surreal"
edition = "2021"
license = "MIT"
name = "app-db-schema"
repository = "https://github.com/seaorm-up/schema"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_dep = {path = "../db_dep", version = "^0.1.0"}
insta = "1.21.0"
once_cell = "^1.15.0"
surrealdb-obj-derive = {path = "../patch/surrealdb-schema-derive", version = "^0.1.0"}

[dev-dependencies.db_dep]
features = ["test"]
path = "../db_dep"
